WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48443
border images don't work right with vertical RenderInlines
https://bugs.webkit.org/show_bug.cgi?id=48443
Summary
border images don't work right with vertical RenderInlines
Dave Hyatt
Reported
2010-10-27 11:04:13 PDT
backgrounds and border images don't work right with vertical RenderInlines. We have to break up into a vertical strip rather than a horizontal strip, and the border edges that we paint are the top/bottom and not the left/right.
Attachments
Patch
(7.77 KB, patch)
2010-10-28 14:01 PDT
,
Dave Hyatt
no flags
Details
Formatted Diff
Diff
Patch
(79.80 KB, patch)
2010-10-28 14:02 PDT
,
Dave Hyatt
bdakin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2010-10-27 11:04:21 PDT
Masks too.
Dave Hyatt
Comment 2
2010-10-28 14:01:09 PDT
Created
attachment 72231
[details]
Patch
Dave Hyatt
Comment 3
2010-10-28 14:02:21 PDT
Created
attachment 72232
[details]
Patch
Dave Hyatt
Comment 4
2010-10-28 14:44:59 PDT
Fixed in
r70813
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug