https://bugs.webkit.org/show_bug.cgi?id=48443

Reviewed by Beth Dakin.

Border images don't work right with vertical RenderInlines. Make border/mask/background painting
do the right thing for vertical strips.

WebCore:

Added fast/blockflow/border-image-* tests.

* rendering/InlineFlowBox.cpp:
(WebCore::InlineFlowBox::paintBoxDecorations):
(WebCore::InlineFlowBox::paintMask):

LayoutTests:

* fast/blockflow/border-image-horizontal-bt.html: Added.
* fast/blockflow/border-image-vertical-lr.html: Added.
* fast/blockflow/border-image-vertical-rl.html: Added.



Canonical link: https://commits.webkit.org/61325@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70813 268f45cc-cd09-0410-ab3c-d52691b4dbfc