WebCore/rendering/InlineFlowBox.cpp
@@ -844,23 +844,26 @@ void InlineFlowBox::paintBoxDecorations(PaintInfo& paintInfo, int tx, int ty)
                 boxModelObject()->paintBorder(context, tx, ty, w, h, renderer()->style(), includeLogicalLeftEdge(), includeLogicalRightEdge());
             else {
                 // We have a border image that spans multiple lines.
-                // We need to adjust _tx and _ty by the width of all previous lines.
+                // We need to adjust tx and ty by the width of all previous lines.
                 // Think of border image painting on inlines as though you had one long line, a single continuous
                 // strip.  Even though that strip has been broken up across multiple lines, you still paint it
                 // as though you had one single line.  This means each line has to pick up the image where
                 // the previous line left off.
                 // FIXME: What the heck do we do with RTL here? The math we're using is obviously not right,
                 // but it isn't even clear how this should work at all.
-                int xOffsetOnLine = 0;
+                int logicalOffsetOnLine = 0;
                 for (InlineFlowBox* curr = prevLineBox(); curr; curr = curr->prevLineBox())
-                    xOffsetOnLine += curr->logicalWidth();
-                int startX = tx - xOffsetOnLine;
-                int totalWidth = xOffsetOnLine;
+                    logicalOffsetOnLine += curr->logicalWidth();
+                int totalLogicalWidth = logicalOffsetOnLine;
                 for (InlineFlowBox* curr = this; curr; curr = curr->nextLineBox())
-                    totalWidth += curr->logicalWidth();
+                    totalLogicalWidth += curr->logicalWidth();
+                int stripX = tx - (isVertical() ? 0 : logicalOffsetOnLine);
+                int stripY = ty - (isVertical() ? logicalOffsetOnLine : 0);
+                int stripWidth = isVertical() ? w : totalLogicalWidth;
+                int stripHeight = isVertical() ? totalLogicalWidth : h;
                 context->save();
                 context->clip(IntRect(tx, ty, w, h));
-                boxModelObject()->paintBorder(context, startX, ty, totalWidth, h, renderer()->style());
+                boxModelObject()->paintBorder(context, stripX, stripY, stripWidth, stripHeight, renderer()->style());
                 context->restore();
             }
         }
@@ -926,16 +929,19 @@ void InlineFlowBox::paintMask(PaintInfo& paintInfo, int tx, int ty)
     } else {
         // We have a mask image that spans multiple lines.
         // We need to adjust _tx and _ty by the width of all previous lines.
-        int xOffsetOnLine = 0;
+        int logicalOffsetOnLine = 0;
         for (InlineFlowBox* curr = prevLineBox(); curr; curr = curr->prevLineBox())
-            xOffsetOnLine += curr->logicalWidth();
-        int startX = tx - xOffsetOnLine;
-        int totalWidth = xOffsetOnLine;
+            logicalOffsetOnLine += curr->logicalWidth();
+        int totalLogicalWidth = logicalOffsetOnLine;
         for (InlineFlowBox* curr = this; curr; curr = curr->nextLineBox())
-            totalWidth += curr->logicalWidth();
+            totalLogicalWidth += curr->logicalWidth();
+        int stripX = tx - (isVertical() ? 0 : logicalOffsetOnLine);
+        int stripY = ty - (isVertical() ? logicalOffsetOnLine : 0);
+        int stripWidth = isVertical() ? w : totalLogicalWidth;
+        int stripHeight = isVertical() ? totalLogicalWidth : h;
         paintInfo.context->save();
         paintInfo.context->clip(IntRect(tx, ty, w, h));
-        boxModelObject()->paintNinePieceImage(paintInfo.context, startX, ty, totalWidth, h, renderer()->style(), maskNinePieceImage, compositeOp);
+        boxModelObject()->paintNinePieceImage(paintInfo.context, stripX, stripY, stripWidth, stripHeight, renderer()->style(), maskNinePieceImage, compositeOp);
         paintInfo.context->restore();
     }
     
